--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "expo-asset": "^8.2.1",
     "expo-blur": "^8.2.2",
     "expo-font": "^8.4.0",
+    "expo-linking": "^2.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
