--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/helper-validator-identifier": "^7.12.11",
     "@expo/vector-icons": "^12.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
@@ -25,11 +26,14 @@
     "expo-linking": "^2.0.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "modal-enhanced-react-native-web": "^0.2.0",
+    "modal-react-native-web": "^0.2.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modal": "^11.6.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.16.1",
     "react-native-tab-view": "^2.15.2",
