--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo-app-loading": "^1.0.1",
     "expo-asset": "^8.2.1",
     "expo-blur": "^8.2.2",
+    "expo-constants": "^10.0.0",
     "expo-font": "^8.4.0",
+    "expo-image-picker": "^10.0.0",
     "expo-linking": "^2.0.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
