--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo-blur": "^8.2.2",
     "expo-constants": "^10.0.0",
     "expo-font": "^8.4.0",
+    "expo-image-manipulator": "^9.0.0",
     "expo-image-picker": "^10.0.0",
+    "expo-image-picker-multiple": "^1.3.1",
     "expo-linking": "^2.0.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
